Agregando parrafo al index

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
     <header>
         <h1>Experimento!</h1>
+        <p>Haciendo cambios en el archivo</p>
     </header>
     <div class="container">
         <h2>Ariel Souto</h2>
     </div>
     <footer>
         <p>Esto es un experimento en nuestra rama llamada "Experimento".</p>
+        <P>Más pruebas en este experimento.</P>
     </footer>
 </body>
 </html>
